# trading-app-rust

./: .gitignore
Backend/: Cargo.toml
Backend/src/: db.rs  main.rs
Backend/src/middleware/: auth.rs  mod.rs
Backend/src/models/: abonnement.rs  dto.rs  email_verification_tokens.rs  health.rs  historic_data.rs  indicator.rs  mod.rs  password_reset_tokens.rs  stock.rs  strategy.rs  strategy_result.rs  trade.rs  trades_fermes.rs  users.rs  wallet.rs
Backend/src/routes/: admin.rs  auth.rs  health.rs  mod.rs  stocks.rs  trade.rs  wallet.rs
Backend/src/services/: indicator_service.rs  mod.rs  strategy_service.rs  trade_service.rs  wallet_service.rs
Backend/src/services/indicators/: ema.rs  mod.rs  point_pivot.rs  rsi.rs  stochastic.rs
Backend/src/services/strategies/: mod.rs  strategy_trait.rs
Backend/src/services/strategies/defaults/: ema.rs  min_max_last_year.rs  mod.rs  point_pivot.rs  stochastic.rs
Backend/src/utils/: jwt.rs  password.rs
