[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
async-trait = "0.1"
polars = { version = "0.44", features = ["lazy", "dtype-full", "diff", "abs", "rolling_window", "cum_agg"] }

# Nouvelles dépendances pour l'authentification
jsonwebtoken = "9"  #Pour générer et vérifier les JWT
pbkdf2 = { version = "0.12", features = ["simple"] } #Pour hasher/vérifier les mots de passe au format Werkzeug
rand = "0.8" #Pour générer le salt aléatoire
base64 = "0.22" # Pour encoder/décoder le salt et hash
sha2 = "0.10" #Pour PBKDF2-HMAC-SHA256
hmac = "0.12"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] } # Pour générer les tokens de reset/verification
reqwest = { version = "0.12", features = ["json"] } # Pour valider les tokens Google

#wallet
futures = "0.3"
rust_decimal = "1.33"

#trade
validator = { version = "0.18", features = ["derive"] }